@@ -1,10 +1,10 @@
-use crate::{damage_types::damage_mod::MagicType, item::{consumable::HealthPotion, def::AllItems, held_item::{Staff, Sword}, wearable::Robe}};
+use crate::{damage_types::damage_mod::MagicType, item::{consumable::HealthPotion, def::{AllItems, ConsumableItem, HeldItem, WearableItem}, held_item::{Staff, Sword}, wearable::Robe}};
 
 use super::entity::Entity;
 /// The struct for the player character.
 #[derive(Debug, Clone, PartialEq)]
-pub struct PlayerCharacter {
-    pub entity: Entity,
+pub struct PlayerCharacter<'a> {
+    pub entity: Entity<'a>,
     pub first_name: String,
     pub last_name: String,
     pub combat_magic: MagicType,
@@ -13,7 +13,7 @@ pub struct PlayerCharacter {
     
 }
 
-impl PlayerCharacter {
+impl<'a> PlayerCharacter<'a> {
     pub fn new() -> Self {
         PlayerCharacter {
             entity: Entity::new(),
@@ -27,20 +27,16 @@ impl PlayerCharacter {
     // !TODO add a way to not need to update the variable with these methods
     // example 
     // player = player.add_sword(sword)
-    pub fn add_staff(&mut self, item: Staff) -> &Self {
-        self.entity.inventory.push(AllItems::Staff(item));
+    pub fn add_held(&mut self, item: HeldItem) -> &Self {
+        self.entity.inventory.push(AllItems::HeldItem(item));
         self
     }
-    pub fn add_sword(&mut self, item: Sword) -> &Self {
-        self.entity.inventory.push(AllItems::Sword(item));
+    pub fn add_consumable(&mut self, item: ConsumableItem) -> &Self {
+        self.entity.inventory.push(AllItems::ConsumableItem(item));
         self
     }
-    pub fn add_health_potion(&mut self, item: HealthPotion) -> &Self {
-        self.entity.inventory.push(AllItems::HealthPotion(item));
-        self
-    }
-    pub fn add_robe(&mut self, item: Robe) -> &Self {
-        self.entity.inventory.push(AllItems::Robe(item));
+    pub fn add_wearable(&mut self, item: WearableItem) -> &Self {
+        self.entity.inventory.push(AllItems::WearableItem(item));
         self
     }
 }
