@@ -1,4 +1,5 @@
 /// A function to test various code.
 pub fn test() {
-    
+    let mut i = (1, 2, "Hi");
+    i.0 = 4;
 }
